// Vitest Snapshot v1

exports[`Popup > Popup baseVue demo works fine 1`] = `
<div
  class="popup-demo"
  data-v-70969ba8=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-70969ba8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      顶部弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-70969ba8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      左侧弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-70969ba8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      中间弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-70969ba8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      底部弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-70969ba8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      右侧弹出
      
    </span>
    <!---->
  </button>
  
  <teleport-stub
    data-v-70969ba8=""
    style="padding: 100px;"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--top"
      style="padding: 100px; visibility: hidden;"
    >
      <!--v-if-->
      
      
    </div>
  </teleport-stub>
</div>
`;

exports[`Popup > Popup customCloseVue demo works fine 1`] = `
<div
  class="popup-demo"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      居中弹出层-带自定义关闭按钮
      
    </span>
    <!---->
  </button>
  <teleport-stub
    style="width: 240px; height: 240px;"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--center"
      style="width: 240px; height: 240px; visibility: hidden;"
    >
      <!--v-if-->
      
      <svg
        class="t-icon t-icon-close-circle close-btn"
        color="#fff"
      >
        <use
          href="#t-icon-close-circle"
        />
      </svg>
      
    </div>
  </teleport-stub>
</div>
`;

exports[`Popup > Popup mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-c2ceb286=""
>
  <h1
    class="title"
    data-v-c2ceb286=""
  >
    Popup 弹窗层
  </h1>
  <p
    class="summary"
    data-v-c2ceb286=""
  >
    由其他控件触发，屏幕滑出或弹出一块自定义内容区域
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-c2ceb286=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础弹出层
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="popup-demo"
        data-v-70969ba8=""
        data-v-c2ceb286=""
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-70969ba8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            顶部弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-70969ba8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            左侧弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-70969ba8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            中间弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-70969ba8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            底部弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-70969ba8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            右侧弹出
            
          </span>
          <!---->
        </button>
        
        <teleport-stub
          data-v-70969ba8=""
          style="padding: 100px;"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
          <div
            class="t-popup t-popup--top"
            style="padding: 100px; visibility: hidden;"
          >
            <!--v-if-->
            
            
          </div>
        </teleport-stub>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-c2ceb286=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件示例
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        应用示例
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="popup-demo"
        data-v-099d70a8=""
        data-v-c2ceb286=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-099d70a8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            底部弹出层-带标题及操作
            
          </span>
          <!---->
        </button>
        <teleport-stub
          data-v-099d70a8=""
          style="height: 258px;"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
          <div
            class="t-popup t-popup--bottom"
            style="height: 258px; visibility: hidden;"
          >
            <!--v-if-->
            
            <div
              class="header"
              data-v-099d70a8=""
            >
              <div
                aria-role="button"
                class="btn btn--cancel"
                data-v-099d70a8=""
              >
                取消
              </div>
              <div
                class="title"
                data-v-099d70a8=""
              >
                标题文字
              </div>
              <div
                aria-role="button"
                class="btn btn--confirm"
                data-v-099d70a8=""
              >
                确定
              </div>
            </div>
            
          </div>
        </teleport-stub>
      </div>
      <div
        class="popup-demo"
        data-v-c2ceb286=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            居中弹出层-带自定义关闭按钮
            
          </span>
          <!---->
        </button>
        <teleport-stub
          style="width: 240px; height: 240px;"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
          <div
            class="t-popup t-popup--center"
            style="width: 240px; height: 240px; visibility: hidden;"
          >
            <!--v-if-->
            
            <svg
              class="t-icon t-icon-close-circle close-btn"
              color="#fff"
            >
              <use
                href="#t-icon-close-circle"
              />
            </svg>
            
          </div>
        </teleport-stub>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Popup > Popup withTitleVue demo works fine 1`] = `
<div
  class="popup-demo"
  data-v-099d70a8=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-099d70a8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      底部弹出层-带标题及操作
      
    </span>
    <!---->
  </button>
  <teleport-stub
    data-v-099d70a8=""
    style="height: 258px;"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--bottom"
      style="height: 258px; visibility: hidden;"
    >
      <!--v-if-->
      
      <div
        class="header"
        data-v-099d70a8=""
      >
        <div
          aria-role="button"
          class="btn btn--cancel"
          data-v-099d70a8=""
        >
          取消
        </div>
        <div
          class="title"
          data-v-099d70a8=""
        >
          标题文字
        </div>
        <div
          aria-role="button"
          class="btn btn--confirm"
          data-v-099d70a8=""
        >
          确定
        </div>
      </div>
      
    </div>
  </teleport-stub>
</div>
`;
